--- a/mechanism_manager/config/cfg.yml
+++ b/mechanism_manager/config/cfg.yml
@@ -1,9 +1,9 @@
-models: ['speed_test.txt']
+models: ['fast_spline.txt']
 quat_start: [[1.0,0.0,0.0,0.0],[1.0,0.0,0.0,0.0]]
 quat_end: [[0.5,0.5,-0.5,-0.5],[0.5,0.5,-0.5,-0.5]] #0.70710678,0.0,-0.70710678,0.0
 prob_mode: hard
 use_weighted_dist: [false,false]
 use_active_guide: [true,false]
 position_dim: 2
-K: 100.0
-B: 40.0
+K: 300.0
+B: 60.0
