--- a/mechanism_manager/config/cfg.yml
+++ b/mechanism_manager/config/cfg.yml
@@ -1,10 +1,11 @@
-models: ['shelf_1.txt']
+models: ['v3d_multiple_tasks_3k_1.txt','v3d_multiple_tasks_3k_2.txt']
 quat_start: [[1.0,0.0,0.0,0.0],[1.0,0.0,0.0,0.0]]
 quat_end: [[0.5,0.5,-0.5,-0.5],[0.5,0.5,-0.5,-0.5]] #0.70710678,0.0,-0.70710678,0.0
-prob_mode: hard
-use_weighted_dist: [false,false]
-use_active_guide: [true,false]
-position_dim: 3
-K: 500.0
-B: 50.0
+prob_mode: soft
+use_weighted_dist: [true,true]
+use_active_guide: [true,true]
+position_dim: 2
+K: 2500.0 #2500.0
+B: 20.0 #20
 normalize: true
+escape_factor: 10
