--- a/mechanism_manager/config/cfg.yml
+++ b/mechanism_manager/config/cfg.yml
@@ -1,25 +1,20 @@
-models: ['v3d_1.txt']
-quat_start: [[1.0,0.0,0.0,0.0],[1.0,0.0,0.0,0.0]]
-quat_end: [[0.5,0.5,-0.5,-0.5],[0.5,0.5,-0.5,-0.5]] #0.70710678,0.0,-0.70710678,0.0
 prob_mode: hard
-use_weighted_dist: [false,false]
-use_active_guide: [true,false]
-execution_time: [10.0,10.0]
+use_weighted_dist: false
 position_dim: 3
+use_active_guide: false
 K: 2500.0 #2500.0
 B: 20.0 #20
-Kf: 300.0 # 100
-Bf: 5.0 # 0.1
-Kfi: 0.0
-n_samples_filter: 10 #100
-phase_dot_th: 0.02 #0.05
-r_th: 0.02
-pre_auto_th: 0.3
-mechanism_type: spline
-normalize: true
 escape_factor: 150.0 #150.0
-f_norm: 6.0
-second_order: true
-inertia: 0.1
-Kr: 100.0
-fade_gain: 10.0 #10.0
+active_guide:
+  execution_time: 10.0
+  Kf: 300.0 # 100
+  Bf: 5.0 # 0.1
+  n_samples_filter: 10 #100
+  phase_dot_th: 0.02 #0.05
+  r_th: 0.02
+  pre_auto_th: 0.3
+  fade_gain: 10.0 #10.0
+second_order:
+  inertia: 0.1
+  Kr: 100.0
+
