--- a/mechanism_manager/config/cfg.yml
+++ b/mechanism_manager/config/cfg.yml
@@ -1,7 +1,5 @@
-prob_mode: hard
-use_weighted_dist: false
-position_dim: 3
-use_active_guide: false
+use_weighted_dist: true
+position_dim: 2
 K: 2500.0 #2500.0
 B: 20.0 #20
 escape_factor: 150.0 #150.0
