--- a/virtual_mechanism/CMakeLists.txt
+++ b/virtual_mechanism/CMakeLists.txt
@@ -77,6 +77,7 @@ add_library(${PROJECT_NAME} ${SHARED_OR_STATIC}
     include/${PROJECT_NAME}/virtual_mechanism_factory.h
     include/${PROJECT_NAME}/virtual_mechanism_gmr.h
     #include/${PROJECT_NAME}/virtual_mechanism_spline.h
+    src/virtual_mechanism_factory.cpp
     src/virtual_mechanism_gmr.cpp
     #src/virtual_mechanism_spline.cpp
 )
